# ChangeLog for app-admin/noobjuice-gentoo
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  14 Oct 2009; Bob Shaffer II (dm-madman) <bob.shaffer.2@gmail.com>
  -noobjuice-gentoo-0.1.ebuild, +noobjuice-gentoo-0.3.ebuild, metadata.xml:
  Version bump, optional documentation added, thanks Tommy, Justin, and others

  10 Oct 2009; Justin Lecher (jlec) <jlec@j-schmitz.net>
  noobjuice-gentoo-0.1.ebuild:
  multilib compatibility

  04 Oct 2009; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  noobjuice-gentoo-0.1.ebuild, metadata.xml:
  Drop unneeded qt-core, sort KEYWORDS, fix metadata.xml

  03 Oct 2009; Bob Shaffer II (dm-madman) <bob.shaffer.2@gmail.com>
  +noobjuice-gentoo-0.1.ebuild, +metadata.xml:
  New Ebuild for bug 286998
