@@ -1,4 +1,4 @@
 DIST noobjuice-gentoo-0.3.tgz 450511 RMD160 914f5d297120a434f99c5bb3cda127d09c2c8d69 SHA1 f475cac33189d0d3f6926e38a193185999b3b976 SHA256 04ce9614cd8d8e95284eaf02f51662d8bee4cc24b2e35a0485e982ee7d4d49c2
-EBUILD noobjuice-gentoo-0.3.ebuild 891 RMD160 74138e2dccb7e82b64ff3babb4d903c07e156059 SHA1 863a43550fba9e496e23cc917a715dc0d8de85c6 SHA256 8307a89b6920a9ea5eecbcd92338df16b13905d5d674c0cec79f2ca94295991c
-MISC ChangeLog 771 RMD160 171230fb4f57214d730cc1701a8f9da1c9ced499 SHA1 93e099ec050e5bc3fe7ac6b737c331917c6ef527 SHA256 b1c42de1060ddf662a6325c87ed1fe63c104fd953a87d1abafc8eeef5ecf49e8
+EBUILD noobjuice-gentoo-0.3.ebuild 864 RMD160 26bf171f5229c156c44148f5dbcf12206382a654 SHA1 5ecb565ff09a21147b1448344d0dcec7b186b841 SHA256 1b38f010ff6a091d3a662752680cf0a8fa4617711889e198fa114286630244bd
+MISC ChangeLog 883 RMD160 19edf2d5e6c2eba999db756484eff9a369d67cfd SHA1 d7bdddcadf6245385b1b04fd4fbbbb6289a0b151 SHA256 26cf59b2a736f955b1b6c29e1f430c25f6f6de6168af17a07c0ce31156b41610
 MISC metadata.xml 532 RMD160 30968a51f6cf0bb5c3e7b4350c3a277c696708ce SHA1 177ad5e2a77aeb9776c38f722a0bb56bce5f897d SHA256 5328e32f208683cc93856032474734c9fa3d64d305827dfb4f8eac8640a9203b
